[package]
name = "display_utils"
version = "0.1.1"
authors = ["kangalioo <jannik.a.schaper@web.de>"]
edition = "2018"
description = "Lightweight and no_std-compatible string formatting utilities"
repository = "https://github.com/kangalioo/display-utils/"
license = "MIT"
categories = ["value-formatting", "no-std", "embedded", "development-tools::debugging", "gui"]
keywords = ["format", "display", "lightweight"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
