[package]
authors = ["kangalioo <jannik.a.schaper@web.de>"]
categories = ["value-formatting", "no-std", "embedded", "development-tools::debugging", "gui"]
description = "Lightweight and no_std-compatible string formatting utilities"
edition = "2018"
keywords = ["format", "display", "lightweight"]
license = "MIT"
name = "display_utils"
repository = "https://github.com/kangalioo/display-utils/"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
